--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ body {
   /*font-family: 'Roboto', sans-serif;*/
    background-color: #F2F1EA;
    font-weight: lighter;
+   width: 1280px;
 }
 
+header {
+  display: flex;
+  /*height: 60px;*/
+  width: 100%;
+}
 
 p {
   font-size: .8em;
@@ -35,20 +41,25 @@ nav {
   /*text-align: center;*/
   display: flex;
   /*justify-content: center;*/
-
 }
 
 #logo {
   height: 43%;
-
-
-
 }
 
-nav > a{
+#logoDiv {
+  display: flex;
+  align-items: center;
+}
+
+.navDiv {
+  display: flex;
+  align-items: center;
+
+}
+.navDiv a {
   padding-left: 25px;
-  padding-right: 35px;
-  padding-top: 7px;
+  padding-right: 25px;
 }
 
 
@@ -66,7 +77,6 @@ nav > div {
 .mainAbout{
   align-items: center;
   color: #131511;
-  width: : 800px;
   padding-left: 155px;
   padding-right: 155px;
 }
@@ -74,7 +84,6 @@ nav > div {
 .aboutBottom{
   align-items: center;
   color: #131511;
-  width: : 800px;
   padding-left: 155px;
   padding-right: 155px;
 }
@@ -160,41 +169,78 @@ td {
 }
 
 .imgWrap{
-  height: 250px;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+
 
 }
 
 
 .img1{
 /*flex-basis: ;*/
-/*background-image: url(images/optimized/product-1.jpg);*/
-
+height: 300PX;
+margin: 7px;
+width: 57%;
+background-size: cover;
+background-position: center;
+background-image: url(images/optimized/product-1.jpg);
 }
 
 .img2 {
-/*background-image: url(images/optimized/product-2.jpg);*/
+height: 300PX;
+margin: 7px;
+width: 18%;
+background-size: cover;
+background-position: center;
+background-image: url(images/optimized/product-2.jpg);
 }
 
 .img3 {
-/*background-image: url(images/optimized/product-3.jpg);*/
+background-image: url(images/optimized/product-3.jpg);
+height: 300PX;
+margin: 7px;
+width: 18%;
+background-size: cover;
+background-position: center;
 }
 
 .img4 {
-/*background-image: url(images/optimized/product-4.jpg);*/
+background-image: url(images/optimized/product-4.jpg);
+height: 300PX;
+margin: 7px;
+width: 18%;
+background-size: cover;
+background-position: center;
+
 }
 
 .img5 {
-/*background-image: url(images/optimized/product-5.jpg);*/
+background-image: url(images/optimized/product-5.jpg);
+height: 300PX;
+margin: 7px;
+width: 18%;
+background-size: cover;
+background-position: center;
 }
 
 .img6 {
-/*background-image: url(images/optimized/product-6.jpg);*/
+background-image: url(images/optimized/product-6.jpg);
+height: 300PX;
+width: 37.5%;
+margin: 7px;
+width: ;
+background-size: cover;
+background-position: center;
 }
 
 .img7 {
-/*background-image: url(images/optimized/product-7.jpg);*/
+background-image: url(images/optimized/product-7.jpg);
+height: 300PX;
+margin: 7px;
+width: 18%;
+background-size: cover;
+background-position: center;
 }
 
 .newsLetter {
