--- a/style.css
+++ b/style.css
@@ -21,28 +21,51 @@ html, body {
   font-family: 'Merriweather', serif;
   /*font-family: 'Roboto', sans-serif;*/
    background-color: #F2F1EA;
-   font-weight: lighter;
+   font-weight: normal;
    width: 100%  ;
    margin: 0;
 }
 
 header {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   height: 60px;
   width: 100%;
   color: #2B2F26;
   background-color: #FFFFFF;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
-p {
-  font-size: .8em;
+#aca {
+  font-size: 3.3em;
+}
+
+
+.mainAbout {
+  margin-top: 78px;
+}
+
+.mainAbout p {
+  font-size: 1em;
   padding: 5px;
+  line-height: 2.5em;
+
+}
+
+.aboutFascilities p {
+  font-size: 1em;
+  padding: 5px;
+  line-height: 2.5em;
 }
 
 nav {
   background-color: #FFFFFF;
   display: flex;
   width: 100%;
+
 
 
 
@@ -98,7 +121,8 @@ H3 {
 }
 .birdhouse{
   float: left;
-  height: 75px;
+  height: 95px;
+  margin: 15px;
 }
 
 
@@ -107,6 +131,11 @@ h1 {
   font-weight: normal;
   text-align: center;
   padding-bottom: 25px;
+}
+
+.signUp {
+  margin: 0;
+
 }
 
 h2  {
@@ -118,6 +147,8 @@ h2  {
   text-align: center;
   background-image: url(images/optimized/background-3.jpg);
   background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
 }
@@ -135,11 +166,20 @@ h2  {
 .shelfImg {
   height: 100px;
   font-size: .5em;
+
 }
+
+
 
 .imageText {
   vertical-align: middle;
 }
+
+.shelfTxt {
+  font-size: .78em;
+  line-height: 1.56em;
+}
+
 .imageAbout2 > h2 {
   color: white;
 
@@ -154,12 +194,14 @@ table {
   border: 1px solid #131511;
   border-collapse: collapse;
   margin-bottom: 50px
+}
 
-};
 th{
   border: 1px solid #131511;
   border-collapse: collapse;
   padding: 15px;
+  font-weight: normal
+
 }
 td {
   border: 1px solid #131511;
@@ -171,10 +213,35 @@ td {
   padding-top: 45px;
 }
 
+.color{
+    background-color: #F2EADD;
+
+}
+
 .homeMain{
   color: #131511;
   padding-left: 155px;
   padding-right: 155px;
+}
+
+#homeHeading {
+    font-size: 2.8em;
+    font-weight: lighter;
+}
+
+#homeHeading  h1 {
+  margin-bottom: 0;
+  margin-top: 100px;
+}
+
+#homeSubHeading {
+    font-size: 1.3em;
+    font-weight: lighter;
+
+}
+
+#homeSubHeading  h2 {
+  margin-top: 0
 }
 
 .imgWrap{
@@ -193,10 +260,10 @@ td {
 .homePicTxt {
   background-color: #2b2f26;
   text-align: left;
-  padding-left: 15;
-  color: #ffffff;
+  padding: 10px;
+  color: #F2EADD;
   margin-top: 235px ;
-  font-size: 1.22em;
+  font-size: 1.1em;
 
 }
 
@@ -307,14 +374,70 @@ background-position: center;
 margin-bottom: 15px;
 }
 
+
+
 .newsLetter {
   background-image: url(images/optimized/background-2.jpg);
   background-size: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.formMain {
+  background-color: white;
+  width: 737px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.inputDiv {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 25px;
+  font-weight: lighter;
+}
+
+.formMain h1 {
+  font-size: 2.2em;
+  padding: 0;
+  margin-top: 45px;
+}
+
+.formMain h2 {
+  font-size: 1.33em;
+}
+
+
+input {
+    font-family: 'Roboto', sans-serif;
+    border: none;
+    border-bottom: 2.45px solid #968772;
+    margin-bottom: 25px;
+    width: 647px;
+    font-size: 1.6em;
+}
+
+button {
+  font-family: 'Roboto', sans-serif;
+  background-color: #968772;
+  color: white;
+  border: none;
+  width: 150px;
+  height: 67px;
+  font-size: 1.6em;
+  margin-top: 15px;
+}
+
 footer {
   padding: 10px;
   background-color: rgb(48,50,43);
-  color: #ffffff;
-  font-size: 1.36em;
+  color: #F2EADD;
+  font-size: 1.05em;
 
 }
